syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "Base/BoolWrapper.proto";
import "Sync/PlayerGetter.proto";
import "Sync/PlayerSetter.proto";
import "Sync/PlayerBuff.proto";
import "Sync/Map.proto";
import "Dto/Client.proto";
import "Dto/AccountCtrl.proto";
import "Item/HiredMerchant.proto";

import "Creator/CreateCharRequest.proto";
import "Creator/NewPlayerSetter.proto";

package ServiceProto;



message BatchSyncCharacterRequest {
	repeated SyncProto.PlayerSaveDto list = 1;
}




message CompleteLoginRequest{
	int32 characterId = 1;
	int32 channel = 2;
}

service SyncService {
	rpc GetPlayerObject(SyncProto.GetPlayerByLoginRequest) returns(SyncProto.GetPlayerByLoginResponse);
	rpc SetCharacterTransition(Dto.SetClientCharacterTransitionRequest) returns(google.protobuf.Empty);
	rpc HasCharacterInTransition(Dto.CheckCharacterInTransitionRequest) returns(BaseProto.BoolWrapper);
	rpc UpdateAccountState(Dto.UpdateAccountStateRequest) returns(Dto.AccountLoginStateDto);
	rpc BatchPushCharacter(BatchSyncCharacterRequest) returns(google.protobuf.Empty);
	rpc PushPlayerBuffers(SyncProto.PushPlayerBuffsRequest) returns(google.protobuf.Empty);
	rpc GetPlayerBuffers(SyncProto.GetPlayerBufferRequest) returns(SyncProto.PlayerBuffDto);
	rpc CompleteLogin(CompleteLoginRequest) returns(google.protobuf.Empty);
	rpc BatchSyncMap(SyncProto.MapBatchSyncDto) returns(google.protobuf.Empty);

	rpc CreateCharacterCheck(CreatorProto.CreateCharCheckRequest) returns (CreatorProto.CreateCharCheckResponse);
	rpc CreateCharacter(CreatorProto.NewPlayerSaveDto) returns (CreatorProto.CreateCharResponseDto);

	rpc SyncPlayerShop(ItemProto.SyncPlayerShopRequest) returns(google.protobuf.Empty);
	rpc BatchSyncPlayerShop(ItemProto.BatchSyncPlayerShopRequest) returns(google.protobuf.Empty);
}

